[tool.poetry]
name = "optuna-playground"
version = "0.1.0"
description = ""
authors = ["FugaTakata <maple1213goo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-igraph = "^0.9.10"
requests = "^2.27.1"
pandas = "^1.4.2"
networkx = "^2.8"
colorbrewer = "^0.2.0"
chardet = "^4.0.0"
decorator = "^5.1.1"
py4cytoscape = "^1.2.0"
optuna = "^2.10.0"
plotly = "^5.7.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
